<resources>
    <string name="app_name">SPEED CALCULATOR</string>
    <string name="speed_calculator">SPEED CALCULATOR</string>
    <string name="enter_time_second">Enter time (second)</string>
    <string name="clear">clear</string>
    <string name="calculate">calculate</string>
    <string name="average_speed_km_h">Average Speed (KM/H)</string>
    <string name="enter_distance">Enter distance (meter)</string>
    <string name="over">Speed is over limit!</string>
    <string name="no_data">Distance and time are required.</string>
    <string name="time_error">Time must be greater than zero.</string>
</resources>